--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,17 @@
-add_subdirectory(sdl)
-add_subdirectory(fltk)
+include(${PROJECT_SOURCE_DIR}/cmake.macros)
+subdirlist(children_dirs ${CMAKE_CURRENT_SOURCE_DIR})
 
-find_package(fmt CONFIG)
-find_package(spdlog CONFIG)
-find_package(docopt CONFIG)
-
-# Generic test that uses conan libs
-add_executable(intro main.cpp)
-target_link_libraries(
-  intro
-  PRIVATE project_options
-          project_warnings
-          docopt::docopt
-          fmt::fmt
-          spdlog::spdlog)
-
-target_include_directories(intro PRIVATE "${CMAKE_BINARY_DIR}/configured_files/include")
-
+foreach(child ${children_dirs})
+  get_filename_component(module ${child} NAME)
+  message("Processing module: ${module}")
+  file(GLOB source_files_exec_${module} "${CMAKE_CURRENT_SOURCE_DIR}/${module}/*.cpp")
+  if(NOT
+     "${source_files_exec_${module}}"
+     STREQUAL
+     "")
+    add_executable(${module}_exec ${source_files_exec_${module}})
+    target_link_libraries(${module}_exec project_warnings project_options)
+  else()
+    message("No source files have been discovered for ${module} module")
+  endif()
+endforeach()
